Archive2/cd/ca996c66d5e9ed/output
main.cpp: In function 'int main()':
main.cpp:9:18: error: unable to find string literal operator 'operator"" std'
     std::cout << "char == signed char: "std::is_same<char, signed char>::value << '\n';   // false
                  ^
main.cpp:9:44: error: expected ';' before '::' token
     std::cout << "char == signed char: "std::is_same<char, signed char>::value << '\n';   // false
                                            ^
